--- a/src/components/Favorites/Favorites.css
+++ b/src/components/Favorites/Favorites.css
@@ -31,3 +31,11 @@
     opacity: 0.9;
     transition: all 0.2s linear;
 }
+
+.link__none {
+  display: none;
+}
+
+.link__block {
+  display: block;
+}
