--- a/src/pages/MainPage/MainPage.css
+++ b/src/pages/MainPage/MainPage.css
@@ -1,11 +1,14 @@
 .main-page__content {
-    padding: 42px calc(50% - 500px);
+    /* padding: 42px calc(50% - 500px); */
+    width: 960px;
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
+    background-color: #1F1F1F;
 }
 
 .main-page__main-section {
-    padding-left: 20px;
+    padding: 40px 0 160px 20px;
     box-sizing: border-box;
     width: 60%;
 }
@@ -15,6 +18,10 @@
 }
 
 .main-page__favorites {
-    width: 35%;
+    width: 20%;
   margin-right: 20px;
+  padding-top: 40px;
+  position: fixed;
+  top: 92px;
+  right: 440px;
 }
