--- a/src/components/Favorites/Favorites.css
+++ b/src/components/Favorites/Favorites.css
@@ -1,6 +1,6 @@
 .favorites {
     box-sizing: border-box;
-    border: 1px solid rgba(0, 8, 7);
+    border: 1px solid #496dda;
     padding: 30px 20px;
 }
 
@@ -8,13 +8,35 @@
     box-sizing: border-box;
     width: 100%;
     font-size: 16px;
-    padding: 5px 10px;
+    padding: 10px 10px;
     border: 1px solid rgba(0, 8, 7, .5);
+  border-radius: 3px;
     margin-bottom: 24px;
 }
 
 .favorites__list {
     margin-bottom: 24px;
+}
+
+.favorites__list--item {
+  margin-bottom: 10px;
+}
+
+.favorites__list--title {
+  display: inline-block;
+  width: 90%;
+}
+
+.favorites__list--delete {
+  cursor: pointer;
+  border-radius: 2px;
+  transition: all 0.2s linear;
+}
+
+.favorites__list--delete:hover {
+  background-color: #496DDB;
+  color: #ded4d4;
+  transition: all 0.2s linear;
 }
 
 .favorites__save {
@@ -23,6 +45,7 @@
     padding: 10px 15px;
     color: #FFEEDB;
     font-size: 14px;
+  border-radius: 3px;
     transition: all 0.2s linear;
 }
 
@@ -38,4 +61,5 @@
 
 .link__block {
   display: block;
+  color: aqua;
 }
