--- a/src/components/SearchBox/SearchBox.css
+++ b/src/components/SearchBox/SearchBox.css
@@ -14,14 +14,16 @@
     margin-top: 5px;
     width: 300px;
     font-size: 14px;
-    padding: 5px 10px;
+    padding: 10px 10px;
     border: 1px solid rgba(0, 8, 7, .5);
+  border-radius: 3px;
 }
 
 .search-box__form-submit {
     margin-top: 17px;
     padding: 5px 10px;
     border: none;
+    border-radius: 3px;
     transition: all 0.2s linear;
     color: #FFEEDB;
     background-color: rgba(0, 8, 7);
